--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <p>Hi</p>
+
+        <p>Hello there!</p>
         <script src="/index.js" async defer></script>
     </body>
 </html>
